--- a/src/components/pages/product/product.css
+++ b/src/components/pages/product/product.css
@@ -1,15 +1,47 @@
-.product-container{
+.product__wrap{
+   margin: 0 auto;
+   border: 1px solid black;
+   max-width: 1225px;
+   width: 100%;
+   height: 450px;
+}
+.product__source{
+   flex-direction: row;
+   display: flex;
+}
+.product__name{
    margin: 0 auto;
    display: flex;
-   justify-content: space-around;
-   flex-direction: column;
+   justify-content: center;
    align-items: center;
-   padding: 10px;
-   border: 2px solid #000;
-   width: 180px;
-   height: 345px;
+   height: 45px;
+   border: 1px solid black;
 }
-.product__name,
-.product__description {
-   align-self: flex-start;
+.product__main{
+   border: 1px solid black;
+   height: 100%;
+   max-height: 405px;
+   display: flex;
+   flex-direction: row;
+}
+
+.product__galery{
+   border: 1px solid black;
+   width: 100%;
+   max-width: 120px;
+}
+.product__img{
+   border: 1px solid black;
+   width: 100%;
+   max-width: 390px;
+}
+.product__description{
+   border: 1px solid black;
+   width: 100%;
+   max-width: 485px;
+}
+.product__price{
+   border: 1px solid black;
+   width: 100%;
+   max-width: 245px;
 }
