--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,23 +1,20 @@
-form {
+header form {
   position: relative;
   width: 300px;
   margin: 0 auto;
   background: #fcfaeb;
 }
-
-input, button {
+header input, header button {
   border: 1px solid blueviolet;
   outline: none;
   background: transparent;
 }
-
-input {
+header input {
   width: 100%;
   height: 42px;
   padding-left: 15px;
 }
-
-button {
+header button {
   height: 42px;
   width: 42px;
   position: absolute;
@@ -25,15 +22,13 @@ button {
   right: 0;
   cursor: pointer;
 }
-
-button:before {
+header button:before {
   content: "?";
   font-family: Arial;
   font-size: 16px;
   color: #a82929;
 }
-
-.basket {
+header .basket {
   width: 60px;
   height: 60px;
   border: 1px solid black;
