--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,40 +1,43 @@
-form {
-  position: relative;
-  width: 300px;
-  margin: 0 auto;
-  background: #fcfaeb;
-}
+header {
 
-input, button {
-  border: 1px solid blueviolet;
-  outline: none;
-  background: transparent;
-}
+  form {
+    position: relative;
+    width: 300px;
+    margin: 0 auto;
+    background: #fcfaeb;
+  }
 
-input {
-  width: 100%;
-  height: 42px;
-  padding-left: 15px;
-}
+  input, button {
+    border: 1px solid blueviolet;
+    outline: none;
+    background: transparent;
+  }
 
-button {
-  height: 42px;
-  width: 42px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  cursor: pointer;
-}
+  input {
+    width: 100%;
+    height: 42px;
+    padding-left: 15px;
+  }
 
-button:before {
-  content: "?";
-  font-family: Arial;
-  font-size: 16px;
-  color: #a82929;
-}
+  button {
+    height: 42px;
+    width: 42px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+  }
 
-.basket {
-  width: 60px;
-  height: 60px;
-  border: 1px solid black;
+  button:before {
+    content: "?";
+    font-family: Arial;
+    font-size: 16px;
+    color: #a82929;
+  }
+
+  .basket {
+    width: 60px;
+    height: 60px;
+    border: 1px solid black;
+  }
 }
