--- a/src/components/pages/main/products/cards/Product.css
+++ b/src/components/pages/main/products/cards/Product.css
@@ -1,5 +1,11 @@
+.cards__section {
+  width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .product {
-  max-width: 200px;
+  width: 350px;
   max-height: 400px;
   display: flex;
   flex-direction: column;
