--- a/src/components/pages/main/products/cards/Product.scss
+++ b/src/components/pages/main/products/cards/Product.scss
@@ -2,11 +2,12 @@
   width: 70%;
   display: flex;
   flex-wrap: wrap;
+  background: lightpink;
 }
 
 .product {
-  width: 350px;
-  max-height: 400px;
+  width: 180px;
+  height: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
