--- a/src/components/pages/product/product.css
+++ b/src/components/pages/product/product.css
@@ -1,57 +1,142 @@
+/* BLOCKS */
+.product-container{
+   height: 130vh;
+}
 .product__wrap{
    margin: 0 auto;
-   border: 1px solid black;
+   margin-top: 50px;
    max-width: 1225px;
    width: 100%;
-   height: 495px;
+   height: 800px;
 }
 .product__source{
-   flex-direction: row;
    display: flex;
+   flex-direction: row;
+   margin-bottom: 30px;
+}
+.source_item{
+   display: flex;
+   flex-direction: row;
+   margin-bottom: 0px;
+   height: 100%;
+   max-height: 52px;
+   font-size: 32px;
+   margin-right: 10px;
 }
 .product__name{
-   margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 45px;
-   border: 1px solid black;
 }
 .product__main{
-   border: 1px solid black;
-   height: 100%;
-   max-height: 405px;
    display: flex;
    flex-direction: row;
+   height: 100%;
+   max-height: 725px;
 }
-
 .product__galery{
-   border: 1px solid black;
    width: 100%;
    max-width: 120px;
 }
-.product__img{
-   border: 1px solid black;
+.product__galery div{
+   margin-bottom: 20px;
+}
+.product__image{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+.main_img{
+   padding-top: 30px;
+   max-width: 600px;
    width: 100%;
-   max-width: 390px;
 }
 .product__description{
-   border: 1px solid black;
+   background: #F5F5F5FF;
+   border-radius: 10px;
    width: 100%;
-   max-width: 485px;
-}
-.product__description .item{
-   height: 67px;
+   max-width: 505px;
+   height: fit-content;
+   padding: 20px 40px;
 }
 .product__price{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   border: 1px solid black;
    width: 100%;
-   max-width: 245px;
+   max-width: 505px;
 }
-.product__price .item{
+/* ELEMS */
+.source_item{
+   text-transform: uppercase;
+}
+.product__image img{
+   max-width: 100px;
+}
+.main_img img{
+   width: 100%;
+   max-width: 500px;
+}
+.product__name{
+   font-size: 28px;
+   font-weight: 700;
+   text-transform: uppercase;
+   margin-bottom: 0px;
+}
+.product__price .elem,
+.product__description .item{
    height: 67px;
+}
+.product__price .elem{
+   text-transform: uppercase;
+   margin-bottom: 15px;
+}
+.product__price .elem:first-child{
+   font-weight: 700;
+   font-size: 24px;
+}
+.product__price .elem:nth-child(2) {
+   color: red;
+   border: 1px solid red;
+   border-radius: 10px;
+}
+.product__price .elem:nth-child(2):hover {
+   color: #fff;
+   background: red;
+   border: 1px solid red;
+   border-radius: 10px;
+}
+.product__price .elem:nth-child(3) {
+   color: red;
+   border: 1px solid red;
+   border-radius: 10px;
+}
+
+.product__price .elem:nth-child(3):hover {
+   color: #fff;
+   background: red;
+   border: 1px solid red;
+   border-radius: 10px;
+}
+.product__description .item{
+   display: flex;
+   justify-content: space-between;
+   align-content: center; 
+   flex-wrap: wrap;
+   border-top: 1px solid black;
+   border-radius: 0px;
+}
+.product__description .item:nth-child(6) {
+   display: flex;
+   justify-content: space-between;
+   align-content: center;
+   flex-wrap: wrap;
+   border-top: 1px solid black;
+   border-radius: 0px;
+   height:fit-content;
+}
+.pre__description{
+   text-transform: uppercase;
 }
