--- a/src/components/pages/product/product.css
+++ b/src/components/pages/product/product.css
@@ -108,6 +108,12 @@
    border: 1px solid red;
    border-radius: 10px;
 }
+.product__price .elem:nth-child(2):focus {
+   color: rgb(20, 209, 64);
+   background: #fff;
+   border: 1px solid rgb(20, 209, 64);
+   border-radius: 10px;
+}
 .product__price .elem:nth-child(3) {
    color: red;
    border: 1px solid red;
@@ -118,6 +124,12 @@
    color: #fff;
    background: red;
    border: 1px solid red;
+   border-radius: 10px;
+}
+.product__price .elem:nth-child(3):active {
+   color: rgb(20, 209, 64);
+   background: #fff;
+   border: 1px solid rgb(20, 209, 64);
    border-radius: 10px;
 }
 .product__description .item{
