--- a/src/components/pages/product/product.css
+++ b/src/components/pages/product/product.css
@@ -3,6 +3,8 @@
    height: 130vh;
 }
 .product__wrap{
+   display: flex;
+   flex-direction: column;
    margin: 0 auto;
    margin-top: 50px;
    max-width: 1225px;
@@ -24,6 +26,10 @@
    margin-right: 10px;
 }
 .product__name{
+   font-size: 28px;
+   font-weight: 700;
+   text-transform: uppercase;
+   margin-bottom: 0px;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -31,6 +37,7 @@
 }
 .product__main{
    display: flex;
+   justify-content: space-between;
    flex-direction: row;
    height: 100%;
    max-height: 725px;
@@ -46,11 +53,11 @@
    display: flex;
    flex-direction: column;
    align-items: center;
+   cursor: pointer;
 }
 .main_img{
    padding-top: 30px;
-   max-width: 600px;
-   width: 100%;
+   width: 500px;
 }
 .product__description{
    background: #F5F5F5FF;
@@ -79,12 +86,7 @@
    width: 100%;
    max-width: 500px;
 }
-.product__name{
-   font-size: 28px;
-   font-weight: 700;
-   text-transform: uppercase;
-   margin-bottom: 0px;
-}
+
 .product__price .elem,
 .product__description .item{
    height: 67px;
@@ -103,12 +105,13 @@
    border-radius: 10px;
 }
 .product__price .elem:nth-child(2):hover {
+   transition: all 0.8s ease 0s;
    color: #fff;
    background: red;
    border: 1px solid red;
    border-radius: 10px;
 }
-.product__price .elem:nth-child(2):focus {
+.product__price .elem:nth-child(2):active {
    color: rgb(20, 209, 64);
    background: #fff;
    border: 1px solid rgb(20, 209, 64);
@@ -121,6 +124,7 @@
 }
 
 .product__price .elem:nth-child(3):hover {
+   transition: all 0.8s ease 0s;
    color: #fff;
    background: red;
    border: 1px solid red;
@@ -151,4 +155,50 @@
 }
 .pre__description{
    text-transform: uppercase;
+}
+/*    POPUP    */
+.popup{
+   position: fixed;
+   width: 100%;
+   height: 100%;
+   background: rgba(0,0,0,0.8);
+   top: 0;
+   left: 0;
+   opacity: 0;
+   visibility: hidden;
+   transition: all 0.8s ease 0s;
+}
+
+.popup.open{
+   opacity: 1;
+   visibility: visible;
+}
+.popup.open .popup__content{
+   opacity: 1;
+}
+.popup__body{
+   min-height: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding: 30px 10px;
+}
+.popup__content{
+   max-width: 800px;
+   padding: 30px;
+   position: relative;
+   transition: all 0.8s ease 0s;
+}
+.popup__content img{
+   border-radius: 20px;
+}
+.popup__content a{
+   color: #fff;
+   font-size: 24px;
+   text-decoration: none;
+}
+.popup__close{
+   position: absolute;
+   right: 0px;
+   top: 0px;
 }
