--- a/src/components/pages/main/Filters/Filters.scss
+++ b/src/components/pages/main/Filters/Filters.scss
@@ -2,7 +2,14 @@
   width: 300px;
   background: #59c3c3;
 }
+
 .filter-list {
   height: 120px;
   overflow-y: scroll;
+
+  &::-webkit-scrollbar {
+    width: 6px;
+    background-color: #e35050;
+
+  }
 }
