--- a/src/components/pages/main/Filters/Filters.css
+++ b/src/components/pages/main/Filters/Filters.css
@@ -3,9 +3,17 @@
   background: #59c3c3;
 }
 
-.filter-list {
+.filter-list__checkbox {
   height: 120px;
   overflow-y: scroll;
+}
+.filter-list__checkbox::-webkit-scrollbar {
+  width: 6px;
+  background-color: #e35050;
+}
+
+.filter-list__range {
+  height: 120px;
 }
 
 /*# sourceMappingURL=Filters.css.map */
