--- a/src/components/pages/main/Filters/Filters.scss
+++ b/src/components/pages/main/Filters/Filters.scss
@@ -3,7 +3,7 @@
   background: #59c3c3;
 }
 
-.filter-list {
+.filter-list__checkbox {
   height: 120px;
   overflow-y: scroll;
 
@@ -12,4 +12,8 @@
     background-color: #e35050;
 
   }
+}
+.filter-list__range {
+  height: 120px;
+
 }
