--- a/src/components/pages/main/products/cards/Product.css
+++ b/src/components/pages/main/products/cards/Product.css
@@ -1,5 +1,5 @@
-.cards__section {
-  width: calc(100% - 300px);
+.product-items {
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
   background: lightpink;
