--- a/src/components/basket/basket.css
+++ b/src/components/basket/basket.css
@@ -1,4 +1,15 @@
+#product-page{
+   display: flex;
+   flex-direction: column;
+}
 .basket__container{
+   width: 100%;
+   display: flex;
+   justify-content: space-between;
+   padding: 50px 100px;
+   display: none;
+}
+.basket__pag{
    width: 100%;
    display: flex;
    justify-content: space-between;
@@ -66,4 +77,9 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+.header_info-wrapper{
+   display: flex;
+   justify-content: space-around;
+   align-items: flex-start;
 }
