--- a/src/components/pages/main/products/cards/Product.scss
+++ b/src/components/pages/main/products/cards/Product.scss
@@ -1,15 +1,27 @@
 .product-items {
+  padding: 10px;
   height: 100%;
   display: flex;
   flex-wrap: wrap;
   background: lightpink;
+  gap: 10px
 }
-
-.product {
-  width: 180px;
-  height: 300px;
-  display: flex;
+.items-cards {
+}
+.items-list {
   flex-direction: column;
+}
+.product-cards {
+  width: 200px;
+  height: 300px;
+  margin: 0 auto;
+  border: 1px solid black;
+}
+.product-list {
+  padding: 10px;
+  width: 90%;
+  height: 170px;
+  display: flex;
   align-items: center;
   justify-content: space-between;
   border: 1px solid black;
