--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,6 @@
+header {
+  padding: 20px;
+}
 header form {
   position: relative;
   width: 300px;
@@ -29,9 +32,20 @@ header button:before {
   color: #a82929;
 }
 header .basket {
-  width: 60px;
+  width: 140px;
   height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: left;
   border: 1px solid black;
+}
+header .basket .basket-logo {
+  width: 40px;
+  height: 40px;
+  background-image: url("../../assets/icons/cart-medium.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /*# sourceMappingURL=header.css.map */
