--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,5 @@
 header {
-
+  padding: 20px;
   form {
     position: relative;
     width: 300px;
@@ -36,8 +36,21 @@ header {
   }
 
   .basket {
-    width: 60px;
+    width: 140px;
     height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
     border: 1px solid black;
+
+    .basket-logo {
+      width: 40px;
+      height: 40px;
+      background-image: url('../../assets/icons/cart-medium.svg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+
+    }
   }
 }
