--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  color: #1a1919;
+}
+
 header {
   height: 120px;
   background: #A3D0C3;
