--- a/src/index.scss
+++ b/src/index.scss
@@ -29,3 +29,9 @@ footer {
   justify-content: space-between;
   background: #59c3c3;
 }
+.error-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
