--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,51 +1,57 @@
 header {
   padding: 20px;
 }
+
 header form {
   position: relative;
   width: 300px;
   margin: 0 auto;
   background: #fcfaeb;
 }
-header input, header button {
-  border: 1px solid blueviolet;
-  outline: none;
+
+header input,
+header button {
+  border: 1px solid #7f21d7;
   background: transparent;
+  outline: none;
 }
+
 header input {
   width: 100%;
   height: 42px;
   padding-left: 15px;
 }
+
 header button {
-  height: 42px;
-  width: 42px;
   position: absolute;
   top: 0;
   right: 0;
+  width: 42px;
+  height: 42px;
   cursor: pointer;
 }
-header button:before {
-  content: "?";
-  font-family: Arial;
-  font-size: 16px;
+
+header button::before {
   color: #a82929;
+  content: '?';
+  font-family: Arial, serif;
+  font-size: 16px;
 }
+
 header .basket {
+  display: flex;
   width: 140px;
   height: 60px;
-  display: flex;
   align-items: center;
   justify-content: left;
-  border: 1px solid black;
+  border: 1px solid #000;
 }
-header .basket .basket-logo {
+
+header .basket-logo {
   width: 40px;
   height: 40px;
-  background-image: url("../../assets/icons/cart-medium.svg");
+  background-image: url('../../assets/icons/cart-medium.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-
-/*# sourceMappingURL=header.css.map */
