--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,6 @@
 header {
   padding: 20px;
+
   form {
     position: relative;
     width: 300px;
@@ -7,10 +8,11 @@ header {
     background: #fcfaeb;
   }
 
-  input, button {
-    border: 1px solid blueviolet;
-    outline: none;
+  input,
+  button {
+    border: 1px solid #7f21d7;
     background: transparent;
+    outline: none;
   }
 
   input {
@@ -20,37 +22,36 @@ header {
   }
 
   button {
-    height: 42px;
-    width: 42px;
     position: absolute;
     top: 0;
     right: 0;
+    width: 42px;
+    height: 42px;
     cursor: pointer;
   }
 
-  button:before {
-    content: "?";
-    font-family: Arial;
-    font-size: 16px;
+  button::before {
     color: #a82929;
+    content: '?';
+    font-family: Arial, serif;
+    font-size: 16px;
   }
 
   .basket {
+    display: flex;
     width: 140px;
     height: 60px;
-    display: flex;
     align-items: center;
     justify-content: left;
-    border: 1px solid black;
+    border: 1px solid #000;
+  }
 
-    .basket-logo {
-      width: 40px;
-      height: 40px;
-      background-image: url('../../assets/icons/cart-medium.svg');
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-
-    }
+  .basket-logo {
+    width: 40px;
+    height: 40px;
+    background-image: url('../../assets/icons/cart-medium.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 }
