--- a/src/components/pages/main/products/cards/Product.scss
+++ b/src/components/pages/main/products/cards/Product.scss
@@ -1,29 +1,33 @@
 .product-items {
-  padding: 10px;
-  height: 100%;
   display: flex;
+  height: 100%;
   flex-wrap: wrap;
-  background: lightpink;
-  gap: 10px
+  padding: 10px;
+  background: #fdb7c2;
+  gap: 10px;
 }
+
 .items-cards {
   flex-direction: row;
 }
+
 .items-list {
   flex-direction: column;
 }
+
 .product-cards {
   width: 200px;
-  main-height: 320px;
+  min-height: 320px;
+  border: 1px solid #000;
   margin: 0 auto;
-  border: 1px solid black;
 }
+
 .product-list {
-  padding: 10px;
+  display: flex;
   width: 90%;
   height: 170px;
-  display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid black;
+  padding: 10px;
+  border: 1px solid #000;
 }
