--- a/src/components/pages/product/product.css
+++ b/src/components/pages/product/product.css
@@ -1,213 +1,245 @@
 /* BLOCKS */
-.product-container{
-   height: 130vh;
-   margin: 0 auto;
+.product-container {
+  height: 130vh;
+  margin: 0 auto;
 }
-.product__wrap{
-   display: flex;
-   flex-direction: column;
-   margin: 0 auto;
-   margin-top: 50px;
-   max-width: 1225px;
-   width: 100%;
-   height: 800px;
+
+.product__wrap {
+  display: flex;
+  width: 100%;
+  max-width: 1225px;
+  height: 800px;
+  flex-direction: column;
+  margin: 50px auto 0;
 }
-.product__source{
-   display: flex;
-   flex-direction: row;
-   margin-bottom: 30px;
+
+.product__source {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 30px;
 }
-.source_item{
-   display: flex;
-   flex-direction: row;
-   margin-bottom: 0px;
-   height: 100%;
-   max-height: 52px;
-   font-size: 32px;
-   margin-right: 10px;
+
+.source_item {
+  display: flex;
+  height: 100%;
+  max-height: 52px;
+  flex-direction: row;
+  margin-right: 10px;
+  margin-bottom: 0;
+  font-size: 32px;
 }
-.product__name{
-   font-size: 28px;
-   font-weight: 700;
-   text-transform: uppercase;
-   margin-bottom: 0px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   height: 45px;
+
+.product__name {
+  display: flex;
+  height: 45px;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 0;
+  font-size: 28px;
+  font-weight: 700;
+  text-transform: uppercase;
 }
-.product__main{
-   display: flex;
-   justify-content: space-between;
-   flex-direction: row;
-   height: 100%;
-   max-height: 725px;
+
+.product__main {
+  display: flex;
+  height: 100%;
+  max-height: 725px;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.product__galery{
-   width: 100%;
-   max-width: 120px;
+
+.product__galery {
+  width: 100%;
+  max-width: 120px;
 }
-.product__galery div{
-   margin-bottom: 20px;
+
+.product__galery div {
+  margin-bottom: 20px;
 }
-.product__image{
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   cursor: pointer;
+
+.product__image {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
 }
-.main_img{
-   padding-top: 30px;
-   width: 500px;
+
+.main_img {
+  width: 500px;
+  padding-top: 30px;
 }
-.product__description{
-   background: #F5F5F5FF;
-   border-radius: 10px;
-   width: 100%;
-   max-width: 505px;
-   height: fit-content;
-   padding: 20px 40px;
+
+.product__description {
+  width: 100%;
+  max-width: 505px;
+  height: fit-content;
+  padding: 20px 40px;
+  border-radius: 10px;
+  background: #f5f5f5ff;
 }
-.product__price{
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
-   width: 100%;
-   max-width: 505px;
+
+.product__price {
+  display: flex;
+  width: 100%;
+  max-width: 505px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
+
 /* ELEMS */
-.source_item{
-   text-transform: uppercase;
+.source_item {
+  text-transform: uppercase;
 }
-.source_item a{
-   text-decoration: none;
-   color: #000;
+
+.source_item a {
+  color: #000;
+  text-decoration: none;
 }
-.product__image img{
-   max-width: 100px;
+
+.product__image img {
+  max-width: 100px;
 }
-.main_img img{
-   width: 100%;
-   max-width: 500px;
+
+.main_img img {
+  width: 100%;
+  max-width: 500px;
 }
 
 .product__price .elem,
-.product__description .item{
-   height: 67px;
+.product__description .item {
+  height: 67px;
 }
-.product__price .elem{
-   text-transform: uppercase;
-   margin-bottom: 15px;
+
+.product__price .elem {
+  margin-bottom: 15px;
+  text-transform: uppercase;
 }
-.product__price .elem a{
-   text-decoration: none;
-   color: red;
+
+.product__price .elem a {
+  color: #f00;
+  text-decoration: none;
 }
-.product__price .elem:first-child{
-   font-weight: 700;
-   font-size: 24px;
+
+.product__price .elem:first-child {
+  font-size: 24px;
+  font-weight: 700;
 }
+
 .product__price .elem:nth-child(2) {
-   color: red;
-   border: 1px solid red;
-   border-radius: 10px;
+  border: 1px solid #f00;
+  border-radius: 10px;
+  color: #f00;
 }
+
 .product__price .elem:nth-child(2):hover {
-   transition: all 0.8s ease 0s;
-   color: #fff;
-   background: red;
-   border: 1px solid red;
-   border-radius: 10px;
+  border: 1px solid #f00;
+  border-radius: 10px;
+  background: #f00;
+  color: #fff;
+  transition: all 0.8s ease 0s;
 }
+
 .product__price .elem:nth-child(2):active {
-   color: rgb(20, 209, 64);
-   background: #fff;
-   border: 1px solid rgb(20, 209, 64);
-   border-radius: 10px;
+  border: 1px solid rgb(20, 209, 64);
+  border-radius: 10px;
+  background: #fff;
+  color: rgb(20, 209, 64);
 }
+
 .product__price .elem:nth-child(3) {
-   color: red;
-   border: 1px solid red;
-   border-radius: 10px;
+  border: 1px solid #f00;
+  border-radius: 10px;
+  color: #f00;
 }
 
 .product__price .elem:nth-child(3):hover {
-   transition: all 0.8s ease 0s;
-   color: #fff;
-   background: red;
-   border: 1px solid red;
-   border-radius: 10px;
-}
-.product__price .elem:nth-child(3):active {
-   color: rgb(20, 209, 64);
-   background: #fff;
-   border: 1px solid rgb(20, 209, 64);
-   border-radius: 10px;
-}
-.product__description .item{
-   display: flex;
-   justify-content: space-between;
-   align-content: center; 
-   flex-wrap: wrap;
-   border-top: 1px solid black;
-   border-radius: 0px;
-}
-.product__description .item:nth-child(6) {
-   display: flex;
-   justify-content: space-between;
-   align-content: center;
-   flex-wrap: wrap;
-   border-top: 1px solid black;
-   border-radius: 0px;
-   height:fit-content;
-}
-.pre__description{
-   text-transform: uppercase;
-}
-/*    POPUP    */
-.popup{
-   position: fixed;
-   width: 100%;
-   height: 100%;
-   background: rgba(0,0,0,0.8);
-   top: 0;
-   left: 0;
-   opacity: 0;
-   visibility: hidden;
-   transition: all 0.8s ease 0s;
+  border: 1px solid #f00;
+  border-radius: 10px;
+  background: #f00;
+  color: #fff;
+  transition: all 0.8s ease 0s;
 }
 
-.popup.open{
-   opacity: 1;
-   visibility: visible;
+.product__price .elem:nth-child(3):active {
+  border: 1px solid rgb(20, 209, 64);
+  border-radius: 10px;
+  background: #fff;
+  color: rgb(20, 209, 64);
 }
-.popup.open .popup__content{
-   opacity: 1;
+
+.product__description .item {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: space-between;
+  border-radius: 0;
+  border-top: 1px solid #000;
 }
-.popup__body{
-   min-height: 100%;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   padding: 30px 10px;
+
+.product__description .item:nth-child(6) {
+  display: flex;
+  height: fit-content;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: space-between;
+  border-radius: 0;
+  border-top: 1px solid #000;
 }
-.popup__content{
-   max-width: 800px;
-   padding: 30px;
-   position: relative;
-   transition: all 0.8s ease 0s;
+
+.pre__description {
+  text-transform: uppercase;
 }
-.popup__content img{
-   border-radius: 20px;
+
+/*    POPUP    */
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  opacity: 0;
+  transition: all 0.8s ease 0s;
+  visibility: hidden;
 }
-.popup__content a{
-   color: #fff;
-   font-size: 24px;
-   text-decoration: none;
+
+.popup.open {
+  opacity: 1;
+  visibility: visible;
 }
-.popup__close{
-   position: absolute;
-   right: 0px;
-   top: 0px;
+
+.popup.open .popup__content {
+  opacity: 1;
+}
+
+.popup__body {
+  display: flex;
+  min-height: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 10px;
+}
+
+.popup__content {
+  position: relative;
+  max-width: 800px;
+  padding: 30px;
+  transition: all 0.8s ease 0s;
+}
+
+.popup__content img {
+  border-radius: 20px;
+}
+
+.popup__content a {
+  color: #fff;
+  font-size: 24px;
+  text-decoration: none;
+}
+
+.popup__close {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
