--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,38 @@
 * {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
 }
 
 a {
-  text-decoration: none;
   color: #1a1919;
+  text-decoration: none;
 }
 
 header {
-  height: 120px;
-  background: #A3D0C3;
   display: flex;
+  height: 120px;
   align-items: center;
   justify-content: space-evenly;
+  background: #a3d0c3;
 }
 
 main {
-  min-height: calc(100vh - 240px);
   display: flex;
+  min-height: calc(100vh - 240px);
 }
 
 footer {
-  height: 100px;
   display: flex;
+  height: 100px;
   align-items: center;
   justify-content: space-between;
   background: #59c3c3;
 }
 
-/*# sourceMappingURL=index.css.map */
+.error-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
