--- a/src/components/pages/main/Filters/RangeSlider.css
+++ b/src/components/pages/main/Filters/RangeSlider.css
@@ -12,7 +12,7 @@
   margin-top: 30px;
 }
 
-input[type='range'] {
+.container input {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -24,7 +24,7 @@ input[type='range'] {
   pointer-events: none;
 }
 
-.slider-track {
+.container .slider-track {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -34,22 +34,22 @@ input[type='range'] {
   margin: auto;
 }
 
-input[type='range']::-webkit-slider-runnable-track {
+.container input::-webkit-slider-runnable-track {
   height: 5px;
   appearance: none;
 }
 
-input[type='range']::-moz-range-track {
+.container input::-moz-range-track {
   height: 5px;
   appearance: none;
 }
 
-input[type='range']::-ms-track {
+.container input::-ms-track {
   height: 5px;
   appearance: none;
 }
 
-input[type='range']::-webkit-slider-thumb {
+.container input::-webkit-slider-thumb {
   width: 16px;
   height: 16px;
   border-radius: 50%;
@@ -60,7 +60,7 @@ input[type='range']::-webkit-slider-thumb {
   pointer-events: auto;
 }
 
-input[type='range']::-moz-range-thumb {
+.container input::-moz-range-thumb {
   width: 20px;
   height: 20px;
   border-radius: 50%;
@@ -70,7 +70,7 @@ input[type='range']::-moz-range-thumb {
   pointer-events: auto;
 }
 
-input[type='range']::-ms-thumb {
+.container input::-ms-thumb {
   width: 20px;
   height: 20px;
   border-radius: 50%;
@@ -80,7 +80,7 @@ input[type='range']::-ms-thumb {
   pointer-events: auto;
 }
 
-input[type='range']:active::-webkit-slider-thumb {
+.container input:active::-webkit-slider-thumb {
   border: 3px solid #247e7e;
   background-color: #fff;
 }
@@ -98,3 +98,5 @@ input[type='range']:active::-webkit-slider-thumb {
 .values .range2::after {
   content: '€';
 }
+
+/*# sourceMappingURL=RangeSlider.css.map */
